added story page, images, + more edits

--- a/characters.html
+++ b/characters.html
@@ -9,25 +9,31 @@
 
 <!-- in depth page for the characters -->
 <body>
-    <h1> Meet the Characters!</h1> 
+    <h1> Meet the Friends!</h1> 
 
+<!-- BELLA -->
     <section>
-     <h2>🐇 Bella the Bunny</h2>
-     <h3> <i>Bella is a soft, white bunny who loves hopping through the meadow and sniffing out tasty berries. </i></h3>
+     <h2>Bella the Bunny</h2>
+     <img src= "https://img.freepik.com/premium-photo/cute-cartoon-white-rabbit-with-pink-ears_1280516-6187.jpg?w=360" alt="Bella the Bunny" width="200"> 
+     <h4> <i>Bella is a soft, white bunny who loves hopping through the meadow and sniffing out tasty berries. </i></h4>
      <p> <b> Personality Traits:</b> Curious, gentle, caring, and thoughtful </p>
      <p> <b> Fun Fact:</b> Bella can hop five times her own height when she’s excited! </p>
 </section>
 
+<!-- MAX -->
 <section>
-    <h2>🐿️ Max the Squirrel</h2>
-     <h3> <i>Max is a quick, bushy-tailed squirrel who loves climbing trees and finding hidden treasures.</i></h3>
+    <h2>Max the Squirrel</h2>
+    <img src="https://media.istockphoto.com/id/148170298/vector/cartoon-squirrel.jpg?s=612x612&w=0&k=20&c=TqZZQfUNw0lZKA19yBu2Zfy8uXClCIDtXSaVE9Jckw8=" alt = "Max the Squirrel" width="200">
+     <h4> <i>Max is a quick, bushy-tailed squirrel who loves climbing trees and finding hidden treasures.</i></h4>
      <p> <b> Personality Traits:</b> Playful, adventurous, energetic, and a little mischievous. </p>
      <p> <b> Fun Fact:</b> Max once buried so many acorns that he forgot where half of them were!</p>
 </section>
 
+<!-- COCO -->
 <section>
-    <h2>🐦 Coco the Bluebird</h2>
-     <h3> <i>Coco is a bright blue songbird who soars above the forest, keeping an eye on her friends below.</i></h3>
+    <h2>Coco the Bluebird</h2>
+    <img src="https://www.shutterstock.com/image-vector/illustration-cartoon-happy-bird-flying-600nw-2494645599.jpg" alt="Coco the Bluebird" width="200">
+     <h4> <i>Coco is a bright blue songbird who soars above the forest, keeping an eye on her friends below.</i></h4>
      <p> <b> Personality Traits:</b> Cheerful, helpful, observant, and optimistic. </p>
      <p> <b> Fun Fact:</b> Coco loves to hum little tunes, and her songs often cheer up the whole forest!</p>
 </section>
