--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <body> 
         <header></header>
             <h1>The Adventure of Bella, Max, and Coco</h1>
+          <!-- navigation bar with hyperlinks to different pages-->
             <nav>
   <ul>
-    <li><a href="characters.html"> Meet the Friends</a></li>
+    <li><a href="story.html"> Read the Story</a></li>
+    <li><a href="characters.html"> Meet the Characters</a></li>
     <li><a href="setting.html"> Setting</a></li>
     <li><a href="history.html"> History</a></li>
   </ul>
@@ -24,13 +26,14 @@
 
         <main>
 
-            <!-- summary of the story -->
+            <!-- short summary of the story with link to full story page -->
         <section> 
         <h2> Story Summary </h2>
         <p> <b><i>The Adventure of Bella, Max, and Coco </b></i> is a heartwarming story about three animal friends, a <i>bunny</i>, a <i>squirrel</i>, and a <i>bluebird</i>, who set out to find the biggest, juiciest berry in the forest. Along the way, they discover that the berry is out of reach for each of them on their own. By working together, Bella stacking stones, Max climbing, and Coco steadying the branch, they succeed in picking the berry and share it equally. The story highlights the importance of teamwork, friendship, and sharing.</p>
-        </section> 
+        <p><i><a href="story.html">Click here to keep reading!</a></i></p>
+    </section> 
 
-             <!-- character intro -->
+             <!-- character intro with links to full character page + full setting page -->
         <section>
         <h2> Who are the characters? </h2>
         <ul>
