--- a/setting.html
+++ b/setting.html
@@ -12,6 +12,7 @@
     <body> 
         <h1> The Setting</h1>
 
+<!-- MEADOW -->
         <section> 
             <h2> The Meadow</h2>
             <h4> <i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i></h4>
@@ -26,6 +27,7 @@
         </ul>
                </section>
 
+ <!-- FOREST -->
      <section> 
             <h2> The Forest</h2>
             <h4> <i>The forest is full of tall, leafy trees that provide shade and mystery. Sunlight peeks through the branches, and the air is cool and earthy. It’s where the friends found the berry bush, and it’s also a place full of surprises and hidden treasures. </i></h4>
