added css styling

--- a/history.html
+++ b/history.html
@@ -7,10 +7,14 @@
     <title>Basic HTML Structure</title>
 </head>
 
+<!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+
 
 <!-- history of the story -->
+ <h1> History of the Story</h1>
 <main> 
-    <h1> History of the Story</h1>
+    
 
     <h2> Inspiration</h2>
     <p> The story of <b><em>The Adventure of Bella, Max, and Coco</b></em> was created as a simple, playful tale to teach kids about the importance of teamwork, friendship, and sharing. The idea came from imagining three very different animals—a bunny, a squirrel, and a bird—each with their own special skills, and how they might work together to solve a problem</p>
