--- a/setting.html
+++ b/setting.html
@@ -7,15 +7,24 @@
     <title>Basic HTML Structure</title>
 </head>
 
+
+<!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+
+
+
 <!-- in depth page for the setting of the story -->
-<main> 
-    <body> 
-        <h1> The Setting</h1>
+ 
+    <body class="setting-page">
+
+             <h1> The Setting</h1>
+        <main> 
+      
 
 <!-- MEADOW -->
         <section> 
             <h2> The Meadow</h2>
-            <h4> <i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i></h4>
+            <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i><h4>
 
         <h3> What lives here?</h3>
         <ul> 
@@ -44,5 +53,6 @@
 
 
 <p><a href="index.html">⬅ Back to Home</a></p>
-    </body>
-</main>
+   </main>
+</body>
+
