--- a/story.html
+++ b/story.html
@@ -6,36 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML Structure</title>
 </head>
+<!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
 
-<section>
-    <body>
-        <h1> The Adventure of Bella, Max, and Coco </h1>
-        <p> <h3> <i> Once upon a time... </i> </h3> in a bright green meadow, lived <i>Bella the Bunny</i>, <i>Max the Squirrel</i>, and <i>Coco the Bluebird</i>. They were the best of friends and loved exploring together.</p> 
-        <p> One sunny morning, Bella hopped up and said,</p>
-        <blockquote> <i> “Let’s go find the biggest, juiciest berry in the forest!”</i></blockquote>
-        <p> Max’s tail twitched with excitement.</p>
-        <blockquote> <i> “I bet I can climb the tallest tree to spot it first!”</i> he chattered.</blockquote>
-        <p> Coco flapped her wings happily.</p>
-        <blockquote> <i> “And I can fly above to guide us from the sky!”</i></blockquote>
-        <p> Off they went—Bella hopping, Max scurrying, and Coco soaring. After a while, Coco spotted something shiny red near a bush.</p>
-        <blockquote> <i> “Look down there!”</i> she chirped.</blockquote>
-        <p> Bella sniffed the air.</p>
-        <blockquote> <i>“Mmm, I smell berries!”</i></blockquote>
-        <p> But when they reached the bush, the berries were too high for Bella and too far for Max to reach. Together, they thought of a plan:</p>
-        <p> 
-            <ol> 
-                <li> <i>Bella stacked some smooth stones to make a little step.</i></li>
-                <li><i>Max climbed onto Bella’s back.</i></li>
-                <li><i>Coco fluttered down to steady the branch.</i></li>
-            </ol>
-        </p>
-        <p> With teamwork, they plucked the biggest, juiciest berry they had ever seen!</p>
-        <p> They split it into three pieces and shared it under the shade of a tree.</p>
-        <blockquote> <i> “This berry is sweeter because we worked together,”</i> Bella said.</blockquote>
-        <p> And from that day on, the three friends knew that with teamwork, no adventure was too big.</p>
-        <p> <h3> <i> The End! </i> </h3> 
+<body class="story-page">
+  <h1>The Story</h1>
 
-            <p><a href="index.html">⬅ Back to Home</a></p>
+  <main>
+    <h3><em>Once upon a time…</em></h3>
 
-    </body>
-</section>
+    <p>In a bright green meadow lived <em>Bella the Bunny</em>, <em>Max the Squirrel</em>, and <em>Coco the Bluebird</em>. They were the best of friends and loved exploring together.</p>
+
+    <p>One sunny morning, Bella hopped up and said,</p>
+    <blockquote>“Let’s go find the biggest, juiciest berry in the forest!”</blockquote>
+
+    <p>Max’s tail twitched with excitement.</p>
+    <blockquote>“I bet I can climb the tallest tree to spot it first!” he chattered.</blockquote>
+
+    <p>Coco flapped her wings happily.</p>
+    <blockquote>“And I can fly above to guide us from the sky!”</blockquote>
+
+    <p>Off they went—Bella hopping, Max scurrying, and Coco soaring. After a while, Coco spotted something shiny red near a bush.</p>
+    <blockquote>“Look down there!” she chirped.</blockquote>
+
+    <p>Bella sniffed the air.</p>
+    <blockquote>“Mmm, I smell berries!”</blockquote>
+
+    <p>But when they reached the bush, the berries were too high for Bella and too far for Max to reach. Together, they thought of a plan:</p>
+
+    <ol>
+      <li><em>Bella</em> stacked some smooth stones to make a little step.</li>
+      <li><em>Max</em> climbed onto Bella’s back.</li>
+      <li><em>Coco</em> fluttered down to steady the branch.</li>
+    </ol>
+
+    <p>With teamwork, they plucked the biggest, juiciest berry they had ever seen!</p>
+    <p>They split it into three pieces and shared it under the shade of a tree.</p>
+    <blockquote>“This berry is sweeter because we worked together,” Bella said.</blockquote>
+
+    <p>And from that day on, the three friends knew that with teamwork, no adventure was too big.</p>
+
+    <h3><em>The End!</em></h3>
+
+    <p><a href="index.html">⬅ Back to Home</a></p>
+  </main>
+</body>
