--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Basic HTML Structure</title>
 </head>
 
+<!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
 
   <body> 
         <header></header>
@@ -18,7 +20,7 @@
             <nav>
   <ul>
     <li><a href="story.html"> Read the Story</a></li>
-    <li><a href="characters.html"> Meet the Characters</a></li>
+    <li><a href="characters.html"> Meet the Friends</a></li>
     <li><a href="setting.html"> Setting</a></li>
     <li><a href="history.html"> History</a></li>
   </ul>
@@ -28,26 +30,26 @@
 
             <!-- short summary of the story with link to full story page -->
         <section> 
-        <h2> Story Summary </h2>
+        <h2> The Quest for the Berry </h2>
         <p> <b><i>The Adventure of Bella, Max, and Coco </b></i> is a heartwarming story about three animal friends, a <i>bunny</i>, a <i>squirrel</i>, and a <i>bluebird</i>, who set out to find the biggest, juiciest berry in the forest. Along the way, they discover that the berry is out of reach for each of them on their own. By working together, Bella stacking stones, Max climbing, and Coco steadying the branch, they succeed in picking the berry and share it equally. The story highlights the importance of teamwork, friendship, and sharing.</p>
-        <p><i><a href="story.html">Click here to keep reading!</a></i></p>
+        <p><a href="story.html">Keep reading ⮕</a></p>
     </section> 
 
              <!-- character intro with links to full character page + full setting page -->
         <section>
-        <h2> Who are the characters? </h2>
+        <h2> The Forest Crew </h2>
         <ul>
                 <li> Bella the Bunny </li>
                 <li> Max the Squirrel </li>
                 <li> Coco the Bluebird </li>
             </ul>
-        <p><i><a href="characters.html">Click here to learn more about them!</a></i></p>
-        <p><i><a href="setting.html">Click here to learn more about where they live!</a></i></p>
+        <p><a href="characters.html">Learn more about them ⮕</a></p>
+        <p><a href="setting.html">Learn more about where they live ⮕</a></p>
 </section>
 
         <!-- moral of the story -->
         <section>
-        <h2> Moral of the story </h2>
+        <h2> The Big Lesson </h2>
         <p> The story teaches us that teamwork makes big challenges easier. Bella, Max, and Coco all had different strengths, and by combining them, they reached their goal <i>together</i>. </p>
         <p> It also reminds us of the importance of: 
             <ol>
@@ -58,7 +60,7 @@
         <p> We don’t have to do everything alone... working together and caring for each other helps everyone succeed! </p>
        </section>
 
-        <main/> 
+    </main> 
       
 
     </body>
