more styling css edits

--- a/characters.html
+++ b/characters.html
@@ -15,6 +15,8 @@
   <h1>Meet the Friends!</h1>
 
   <main>
+
+    <!-- ADDING A CLASS SO THAT I CAN EDIT THE GALLERY WITH CSS  -->
     <section class="gallery">
 
       <!-- BELLA -->
