--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body> 
         <header></header>
             <h1>The Adventure of Bella, Max, and Coco</h1>
-          <!-- navigation bar with hyperlinks to different pages-->
+
+
+          <!-- navigation bar with hyperlinks to different pages of the story-->
             <nav>
   <ul>
     <li><a href="story.html"> Read the Story</a></li>
