--- a/setting.html
+++ b/setting.html
@@ -15,9 +15,10 @@
 
 <!-- in depth page for the setting of the story -->
  
+<!-- ADDING A CLASS SO THAT I CAN EDIT THE SETTING PAGE WITH CSS  -->
     <body class="setting-page">
 
-             <h1> The Setting</h1>
+             <h1> Where the Adventure Happens </h1>
         <main> 
       
 
