--- a/story.html
+++ b/story.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>The Story</title>
+    <title>Into the Forest: The Story</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML Structure</title>
@@ -9,8 +9,11 @@
 <!-- linking the HTML & CSS together -->
 <link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
 
+
+
+<!-- ADDING A CLASS SO THAT I CAN EDIT THE STORY PAGE WITH CSS  -->
 <body class="story-page">
-  <h1>The Story</h1>
+  <h1>Into the Forest: The Story</h1>
 
   <main>
     <h3><em>Once upon a time…</em></h3>
