--- a/characters.html
+++ b/characters.html
@@ -11,8 +11,8 @@
 <link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
 
 
-<body>
-  <h1>Meet the Friends!</h1>
+<body class="character-page">
+    <h1>Meet the Friends!</h1>
 
   <main>
 
