--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
 </head>
 
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
 
 <!-- history of the story -->
@@ -17,9 +17,11 @@
     
 
     <h2> Inspiration</h2>
-    <p> The story of <b><em>The Adventure of Bella, Max, and Coco</b></em> was created as a simple, playful tale to teach kids about the importance of teamwork, friendship, and sharing. The idea came from imagining three very different animals—a bunny, a squirrel, and a bird—each with their own special skills, and how they might work together to solve a problem</p>
+    <p> The story of <b><em>The Adventure of Bella, Max, and Coco</em></b> was created as a simple, playful tale to teach kids about the importance of teamwork, friendship, and sharing. The idea came from imagining three very different animals—a bunny, a squirrel, and a bird—each with their own special skills, and how they might work together to solve a problem</p>
 
     <h2> How It Was Written </h2>
     <p> This story began as a simple idea for a children’s tale, then was expanded into a wiki project to show how a story can be turned into a whole world of characters, settings, and lessons. It was written with clear language and playful details so kids (and parents!) could enjoy it together.</p>
 <p><a href="index.html">⬅ Back to Home</a></p>
 </main>
+
+</html>
