--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="author" content="Jamie Gonzalez"> 
         <meta name="description" content="this is a wiki page for the kids story The Adventure of Bella, Max, and Coco. This story was genereated by ChatGPT."> 
-        <meta name="keywords" content="html", "story", "kids", "folk", "adventure">
+    <meta name="keywords" content="html, story, kids, folk, adventure">
     <title>Basic HTML Structure</title>
 </head>
 
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
   <body> 
         <header></header>
@@ -33,7 +33,7 @@
             <!-- short summary of the story with link to full story page -->
         <section> 
         <h2> The Quest for the Berry </h2>
-        <p> <b><i>The Adventure of Bella, Max, and Coco </b></i> is a heartwarming story about three animal friends, a <i>bunny</i>, a <i>squirrel</i>, and a <i>bluebird</i>, who set out to find the biggest, juiciest berry in the forest. Along the way, they discover that the berry is out of reach for each of them on their own. By working together, Bella stacking stones, Max climbing, and Coco steadying the branch, they succeed in picking the berry and share it equally. The story highlights the importance of teamwork, friendship, and sharing.</p>
+        <p> <b> <i>The Adventure of Bella, Max, and Coco </i></b>is a heartwarming story about three animal friends, a <i>bunny</i>, a <i>squirrel</i>, and a <i>bluebird</i>, who set out to find the biggest, juiciest berry in the forest. Along the way, they discover that the berry is out of reach for each of them on their own. By working together, Bella stacking stones, Max climbing, and Coco steadying the branch, they succeed in picking the berry and share it equally. The story highlights the importance of teamwork, friendship, and sharing.</p>
         <p><a href="story.html">Keep reading ⮕</a></p>
     </section> 
 
@@ -59,6 +59,7 @@
                 <li> <b>Sharing</b> </li>
                 <li> <b>Creativity & Problem-Solving</b> </li>
             </ol>
+            </p>
         <p> We don’t have to do everything alone... working together and caring for each other helps everyone succeed! </p>
        </section>
 
