--- a/story.html
+++ b/story.html
@@ -7,7 +7,7 @@
     <title>Basic HTML Structure</title>
 </head>
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
 
 
@@ -54,3 +54,4 @@
     <p><a href="index.html">⬅ Back to Home</a></p>
   </main>
 </body>
+</html>
