--- a/characters.html
+++ b/characters.html
@@ -8,7 +8,7 @@
 </head>
 
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
 
 <body class="character-page">
@@ -35,7 +35,7 @@
         <img src="https://media.istockphoto.com/id/148170298/vector/cartoon-squirrel.jpg?s=612x612&w=0&k=20&c=TqZZQfUNw0lZKA19yBu2Zfy8uXClCIDtXSaVE9Jckw8="
              alt="Max the Squirrel" width="200">
          <h4><i>Quick, bushy-tailed squirrel who loves climbing trees and finding hidden treasures.</i></h4>
-        <p><b>Personality Traits:</b> Playful, energetic, and a little mischievous.</p>
+        <p><b>Personality Traits:</b> Playful, energetic, and mischievous.</p>
         <p><b>Fun Fact:</b> Max once buried so many acorns that he forgot where half of them were!</p>
       </section>
 
@@ -45,7 +45,7 @@
         <img src="https://www.shutterstock.com/image-vector/illustration-cartoon-happy-bird-flying-600nw-2494645599.jpg"
              alt="Coco the Bluebird" width="200">
         <h4><i>Blue songbird who soars above the forest, keeping an eye on her friends below.</i></h4>
-        <p><b>Personality Traits:</b> Cheerful, helpful, observant, and optimistic.</p>
+        <p><b>Personality Traits:</b> Cheerful, helpful, and observant.</p>
         <p><b>Fun Fact:</b> Coco loves to hum little tunes, and her songs often cheer up the whole forest!</p>
       </section>
 
@@ -55,3 +55,4 @@
   </main>
 </body>
 
+</html>
