--- a/setting.html
+++ b/setting.html
@@ -9,7 +9,7 @@
 
 
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"">
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
 
 
@@ -57,3 +57,4 @@
    </main>
 </body>
 
+</html>
