fixed validation errors for html/css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
      <meta name="author" content="Jamie Gonzalez"> 
         <meta name="description" content="this is a wiki page for the kids story The Adventure of Bella, Max, and Coco. This story was genereated by ChatGPT."> 
     <meta name="keywords" content="html, story, kids, folk, adventure">
-    <title>Basic HTML Structure</title>
+
+
+    <!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 </head>
 
-<!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
   <body> 
         <header></header>
@@ -53,13 +54,13 @@
         <section>
         <h2> The Big Lesson </h2>
         <p> The story teaches us that teamwork makes big challenges easier. Bella, Max, and Coco all had different strengths, and by combining them, they reached their goal <i>together</i>. </p>
-        <p> It also reminds us of the importance of: 
+        <p> It also reminds us of the importance of:     </p>
             <ol>
                 <li> <b>Friendship</b> </li>
                 <li> <b>Sharing</b> </li>
                 <li> <b>Creativity & Problem-Solving</b> </li>
             </ol>
-            </p>
+
         <p> We don’t have to do everything alone... working together and caring for each other helps everyone succeed! </p>
        </section>
 
