--- a/setting.html
+++ b/setting.html
@@ -4,12 +4,11 @@
     <title>Setting</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Structure</title>
+<!-- linking the HTML & CSS together -->
+<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 </head>
 
 
-<!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
 
 
 
@@ -25,7 +24,7 @@
 <!-- MEADOW -->
         <section> 
             <h2> The Meadow</h2>
-            <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i><h4>
+            <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i></h4>
 
         <h3> What lives here?</h3>
         <ul> 
