--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
+<link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -13,15 +13,20 @@
 
 <!-- history of the story -->
  <h1> Behind the Story</h1>
-<main> 
+<main class="history-grid">
+ <section class="story-card">
     
 
     <h2> Inspiration</h2>
     <p> The story of <b><em>The Adventure of Bella, Max, and Coco</em></b> was created as a simple, playful tale to teach kids about the importance of teamwork, friendship, and sharing. The idea came from imagining three very different animals—a bunny, a squirrel, and a bird—each with their own special skills, and how they might work together to solve a problem</p>
+</section>
 
+<section class="story-card">
     <h2> How It Was Written </h2>
     <p> This story began as a simple idea for a children’s tale, then was expanded into a wiki project to show how a story can be turned into a whole world of characters, settings, and lessons. It was written with clear language and playful details so kids (and parents!) could enjoy it together.</p>
-<p><a href="index.html">⬅ Back to Home</a></p>
+</section>
+    <p><a href="index.html">⬅ Back to Home</a></p>
+
 </main>
 
 </html>
