--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
 
     <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
+<!-- <link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)"> --> -->
+
+<!-- linking html & css but for devices -->
+<link rel="stylesheet" href="style.css">
+
+
 </head>
 
 
-  <body> 
-        <header></header>
+<body class="home-page">        <header></header>
             <h1>The Adventure of Bella, Max, and Coco</h1>
 
 
@@ -30,6 +34,7 @@
 </nav>
 
         <main>
+          
 
             <!-- short summary of the story with link to full story page -->
         <section> 
@@ -37,6 +42,7 @@
         <p> <b> <i>The Adventure of Bella, Max, and Coco </i></b>is a heartwarming story about three animal friends, a <i>bunny</i>, a <i>squirrel</i>, and a <i>bluebird</i>, who set out to find the biggest, juiciest berry in the forest. Along the way, they discover that the berry is out of reach for each of them on their own. By working together, Bella stacking stones, Max climbing, and Coco steadying the branch, they succeed in picking the berry and share it equally. The story highlights the importance of teamwork, friendship, and sharing.</p>
         <p><a href="story.html">Keep reading ⮕</a></p>
     </section> 
+
 
              <!-- character intro with links to full character page + full setting page -->
         <section>
@@ -49,6 +55,7 @@
         <p><a href="characters.html">Learn more about them ⮕</a></p>
         <p><a href="setting.html">Learn more about where they live ⮕</a></p>
 </section>
+
 
         <!-- moral of the story -->
         <section>
