--- a/setting.html
+++ b/setting.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- linking the HTML & CSS together -->
-<link href="style.css" rel = "stylesheet" media="only screen and (min-width:480px)">
+<link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -22,9 +22,9 @@
       
 
 <!-- MEADOW -->
-        <section> 
+         <section class="habitat">
             <h2> The Meadow</h2>
-            <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy... the perfect place to begin an adventure. </i></h4>
+            <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy! </i></h4>
 
         <h3> What lives here?</h3>
         <ul> 
@@ -32,14 +32,14 @@
             <li> Bees 🐝</li>
             <li> Ladybugs 🐞</li>
             <li> Field Mice 🐭</li>
-            <li> Dandelions, daisies, and sunflowers 🌻</li>
+            <li> Dandelions and Sunflowers 🌻</li>
         </ul>
                </section>
 
  <!-- FOREST -->
-     <section> 
+     <section class="habitat">
             <h2> The Forest</h2>
-            <h4> <i>The forest is full of tall, leafy trees that provide shade and mystery. Sunlight peeks through the branches, and the air is cool and earthy. It’s where the friends found the berry bush, and it’s also a place full of surprises and hidden treasures. </i></h4>
+            <h4> <i>The forest is full of tall, leafy trees that provide shade and mystery. Sunlight peeks through the branches, and the air is cool and earthy. It’s where the friends found the berry bush, and it’s also a place full of surprises and hidden treasures! </i></h4>
 
         <h3> What lives here?</h3>
         <ul> 
