tweaking styling & html

--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
 
 
 
-
+<body>
 <!-- history of the story -->
  <h1> Behind the Story</h1>
 <main class="history-grid">
@@ -28,5 +28,6 @@
     <p><a href="index.html">⬅ Back to Home</a></p>
 
 </main>
+</body>
 
 </html>
