adding js and interactivity

--- a/characters.html
+++ b/characters.html
@@ -25,8 +25,13 @@
     <img src="https://img.freepik.com/premium-photo/cute-cartoon-white-rabbit-with-pink-ears_1280516-6187.jpg?w=360"
          alt="Bella the Bunny" width="200">
          <h4><i>Soft, white bunny who loves hopping through the meadow and sniffing out tasty berries.</i></h4>
+
+         <button class="buttonStyle toggleBtn">Learn More!</button>
+
+          <div class="details hide">
         <p><b>Personality Traits:</b> Curious, gentle, caring, and thoughtful</p>
         <p><b>Fun Fact:</b> Bella can hop five times her own height when she’s excited!</p>
+        </div>
       </section>
 
       <!-- MAX -->
@@ -35,8 +40,12 @@
         <img src="https://media.istockphoto.com/id/148170298/vector/cartoon-squirrel.jpg?s=612x612&w=0&k=20&c=TqZZQfUNw0lZKA19yBu2Zfy8uXClCIDtXSaVE9Jckw8="
              alt="Max the Squirrel" width="200">
          <h4><i>Quick, bushy-tailed squirrel who loves climbing trees and finding hidden treasures.</i></h4>
-        <p><b>Personality Traits:</b> Playful, energetic, and mischievous.</p>
+        <button class="buttonStyle toggleBtn">Learn More!</button>
+
+          <div class="details hide">
+         <p><b>Personality Traits:</b> Playful, energetic, and mischievous.</p>
         <p><b>Fun Fact:</b> Max once buried so many acorns that he forgot where half of them were!</p>
+      </div>
       </section>
 
       <!-- COCO -->
@@ -45,14 +54,25 @@
         <img src="https://www.shutterstock.com/image-vector/illustration-cartoon-happy-bird-flying-600nw-2494645599.jpg"
              alt="Coco the Bluebird" width="200">
         <h4><i>Blue songbird who soars above the forest, keeping an eye on her friends below.</i></h4>
+        <button class="buttonStyle toggleBtn">Learn More!</button>
+
+          <div class="details hide">
         <p><b>Personality Traits:</b> Cheerful, helpful, and observant.</p>
         <p><b>Fun Fact:</b> Coco loves to hum little tunes, and her songs often cheer up the whole forest!</p>
+      </div>
       </section>
 
     </section>
 
     <p><a href="index.html">⬅ Back to Home</a></p>
   </main>
+
+
+
+
+<script src="jsexamples/js/click.js"></script>
+
+
 </body>
 
 </html>
