--- a/story.html
+++ b/story.html
@@ -21,19 +21,19 @@
     <p>In a bright green meadow lived <em>Bella the Bunny</em>, <em>Max the Squirrel</em>, and <em>Coco the Bluebird</em>. They were the best of friends and loved exploring together.</p>
 
     <p>One sunny morning, Bella hopped up and said,</p>
-    <blockquote>“Let’s go find the biggest, juiciest berry in the forest!”</blockquote>
+    <blockquote class="hidden-quote">“Let’s go find the biggest, juiciest berry in the forest!”</blockquote>
 
     <p>Max’s tail twitched with excitement.</p>
-    <blockquote>“I bet I can climb the tallest tree to spot it first!” he chattered.</blockquote>
+    <blockquote class="hidden-quote">“I bet I can climb the tallest tree to spot it first!” he chattered.</blockquote>
 
     <p>Coco flapped her wings happily.</p>
-    <blockquote>“And I can fly above to guide us from the sky!”</blockquote>
+    <blockquote class="hidden-quote">“And I can fly above to guide us from the sky!”</blockquote>
 
     <p>Off they went—Bella hopping, Max scurrying, and Coco soaring. After a while, Coco spotted something shiny red near a bush.</p>
-    <blockquote>“Look down there!” she chirped.</blockquote>
+    <blockquote class="hidden-quote">“Look down there!” she chirped.</blockquote>
 
     <p>Bella sniffed the air.</p>
-    <blockquote>“Mmm, I smell berries!”</blockquote>
+    <blockquote class="hidden-quote">“Mmm, I smell berries!”</blockquote>
 
     <p>But when they reached the bush, the berries were too high for Bella and too far for Max to reach. Together, they thought of a plan:</p>
 
@@ -45,7 +45,7 @@
 
     <p>With teamwork, they plucked the biggest, juiciest berry they had ever seen!</p>
     <p>They split it into three pieces and shared it under the shade of a tree.</p>
-    <blockquote>“This berry is sweeter because we worked together,” Bella said.</blockquote>
+    <blockquote class="hidden-quote">“This berry is sweeter because we worked together,” Bella said.</blockquote>
 
     <p>And from that day on, the three friends knew that with teamwork, no adventure was too big.</p>
 
@@ -53,5 +53,8 @@
 
     <p><a href="index.html">⬅ Back to Home</a></p>
   </main>
+
+  <script src="jsexamples/js/click.js"></script>
+
 </body>
 </html>
