--- a/characters.html
+++ b/characters.html
@@ -26,8 +26,10 @@
          alt="Bella the Bunny" width="200">
          <h4><i>Soft, white bunny who loves hopping through the meadow and sniffing out tasty berries.</i></h4>
 
+         <!-- show details button, when clicked shows personality & fun facts -->
          <button class="buttonStyle toggleBtn">Learn More!</button>
 
+         <!-- info we want to hide UNTIL button is clicked -->
           <div class="details hide">
         <p><b>Personality Traits:</b> Curious, gentle, caring, and thoughtful</p>
         <p><b>Fun Fact:</b> Bella can hop five times her own height when she’s excited!</p>
