--- a/setting.html
+++ b/setting.html
@@ -22,7 +22,7 @@
       
 
 <!-- MEADOW -->
-         <section class="habitat">
+         <section id="meadow" class="habitat">
             <h2> The Meadow</h2>
             <h4><i>The meadow is a wide, open space filled with tall green grass, colorful wildflowers, and soft sunshine. It’s where Bella loves to hop around, Max plays hide-and-seek, and Coco sings her cheerful songs. The meadow feels bright, safe, and happy! </i></h4>
 
@@ -37,7 +37,7 @@
                </section>
 
  <!-- FOREST -->
-     <section class="habitat">
+     <section id="forest" class="habitat">
             <h2> The Forest</h2>
             <h4> <i>The forest is full of tall, leafy trees that provide shade and mystery. Sunlight peeks through the branches, and the air is cool and earthy. It’s where the friends found the berry bush, and it’s also a place full of surprises and hidden treasures! </i></h4>
 
@@ -54,6 +54,9 @@
 
 <p><a href="index.html">⬅ Back to Home</a></p>
    </main>
+
+
+<script src="jsexamples/js/click.js"></script>
 </body>
 
 </html>
