more js & css edits

--- a/story.html
+++ b/story.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- linking the HTML & CSS together -->
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="jsexamples/css/style.css">
 </head>
 
 
