--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <!-- linking html & css but for devices -->
 <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="jsexamples/css/style.css">
 
 
 </head>
